--- a/style.css
+++ b/style.css
@@ -72,17 +72,26 @@ img {
 
   position: relative;
 }
-.hero-img {
+.hero-img-sp {
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: 50% 70%;
+}
+.hero-img-pc {
+  display: none;
 }
 .hero-info {
   width: 100%;
   /* padding: 2vw; */
   position: absolute;
   bottom: 10lvh;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+
+  width: fit-content;
 
   display: flex;
   flex-direction: row;
@@ -122,6 +131,27 @@ img {
   font-family: sans-serif;
   font-weight: lighter;
   color: #d9d9d9;
+}
+
+
+
+/* hero PC */
+@media (min-width: 40rem) {
+  .hero-container {
+    width: 100vw;
+    height: 85vw;
+    background-color: #242A2E;
+    background-color: #242A2E;
+  }
+  .scrollArrow {
+    display: none;
+  }
+  .hero-img-sp {
+    display: none;
+  }
+  .hero-img-pc {
+    display: block;
+  }
 }
 
 
